bin_PROGRAMS = ubus-mqtt

noinst_HEADERS = program.h \
		 logger.h list.h misc.h mqtt.h queue.h \
		 mqtt_helper.h \
		 mqtt_msg_dispatcher.h

ubus_mqtt_SOURCES = ubus-mqtt.c arguments.c daemonize.c signals.c \
		 logger.c list.c misc.c mqtt.c queue.c \
		 mqtt_helper.c \
		 mqtt_msg_dispatcher.c \
		 ubus-connect.c
